<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2plot</name>
  <version>0.1.1</version>
  <description>TODO</description>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <exec_depend>python3-asciimatics</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-attrs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>