[metadata]
name = ros2plot
version = 0.1.1
description = Terminal-based real-time plotting tool for ROS2 topics
author = Jeremy Tan
url = https://github.com/jeminism/ros2plot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
install_requires =
    setuptools
    asciimatics
    numpy
    attrs
    pyyaml
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ros2plot = ros2plot.main:main

[develop]
script_dir=$base/lib/ros2plot
[install]
install_scripts=$base/lib/ros2plot